# iGym

./: README.md  run-dev.sh
.github/workflows/: backend-test.yaml  frontend-build-test.yaml
backend/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
backend/migrations/2025-01-18-193719_create_scores/: up.sql
backend/src/: main.rs  response.rs  schema.rs  score.rs
docs/project_documents/: product_backlog.xlsx
docs/project_documents/sprint_1/: sprint_1_backlog.xlsx
docs/project_documents/sprint_2/: sprint_2_backlog.xlsx
docs/project_documents/sprint_3/: sprint_3_backlog.xlsx
docs/project_documents/sprint_4/: sprint_4_backlog.xlsx
docs/project_documents/sprint_5/: sprint_5_backlog.xlsx
frontend/: package-lock.json
src/: .gitignore  README.md
src/.github/workflows/: backend-test.yaml
src/backend/: requirements.txt
src/backend/backend/: settings_dev.py  settings_prod.py  wsgi.py
src/docs/: product_backlog.xlsx
src/frontend/: package-lock.json
src/meetings/: meeting-30-01.md
src/nginx/: Dockerfile
web-app/: .gitignore  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
web-app/backend/: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  db.sqlite3  entrypoint.sh  manage.py  pyenv.cfg  pyvenv.cfg  requirements.txt
web-app/frontend/: Dockerfile  Dockerfile.prod  package-lock.json  package.json  react-router.config.ts  vite.config.ts
web-app/meetings/: meeting-23-01.md
web-app/nginx/: Dockerfile  nginx.conf
web-app/src/: App.tsx
(+289 files in other folders)
